# test-smith

./: .claudignore  .env.example  .gitignore  CLAUDE.md  CONSOLIDATION_QUICK_START.md  DIAGNOSTIC_ANALYSIS.md  Dockerfile.langgraph  EMBEDDING_DIAGNOSTICS.md  GEMINI.md  LANGFUSE_SETUP.md  Makefile  README.md  checkchroma.py  chroma_explorer.ipynb  codebase_registry.json  codebases.yaml  create_notebook.py  docker-compose.yml  ingest_diagnostic.py  ingest_with_preprocessor.py  langgraph.json  main.py  projecttarget.md  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements.in  requirements.txt  switch_model_provider.py  test_gemini_models.py  test_imports.py  test_models.py  test_tools.py  update_causal_nodes_logging.py  update_node_logging.py  visualize_causal_graph.py  visualize_studio_trace.py
.claude/: settings.json
.claude/docs/: CLAUDE_LEGACY.md  coding_conventions.md  testing_guidelines.md
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .temp_test_run_data.json
.github/: UV_GUIDE.md
.github/workflows/: ci.yml  test-graphs.yml
docs/: CODEBASE_MANAGEMENT.md  DOCUMENT_DESIGN_EVALUATION.md  EVALUATION_GUIDE.md  FEATURE_DEV_WORKFLOW.md  GEMINI_SETUP_GUIDE.md  GRAPH_ARCHITECTURE.md  HIERARCHICAL_TASK_DECOMPOSITION.md  LOGGING_DEBUGGING_GUIDE.md  LOGGING_WITH_MODEL_INFO.md  MCP_PHILOSOPHY.md  MODEL_PROVIDER_GUIDE.md  MULTI_GRAPH_MIGRATION_GUIDE.md  MULTI_REPO_WORKFLOW.md  PREPROCESSOR_QUICKSTART.md  PROVENANCE_GUIDE.md  RAG_DATA_PREPARATION_GUIDE.md  README.md  STRUCTURED_LOGGING.md  STUDIO_GUIDE.md  TOOL_USE_GUIDE.md  WEB_SEARCH_PROVIDERS.md  WRITING_RAG_FRIENDLY_DOCUMENTATION.md  add_knowledge.md  agent_graph.dot  agent_graph.md  system-overview.md
docs/architecture/: NODE_CONSOLIDATION_PLAN.md  multi-graph-workflows.md  system-overview.md
docs/archive/: PHASE1_IMPLEMENTATION_PLAN.md  hierarchical-decomposition.md
docs/development/: ci-cd.md  creating-graphs.md  evaluation-guide.md  github-workflows.md  logging-debugging.md
docs/features/: provenance-lineage-tracking.md
docs/getting-started/: installation.md  model-providers.md  quick-start.md
docs/knowledge-base/: CHUNKING_STRATEGY_EVALUATION.md  preprocessor.md  quality-evaluation.md  rag-guide.md  writing-docs.md
docs/roadmap/: LONG_REPORT_GENERATION_ROADMAP.md
evaluation/: QUICK_REFERENCE.md  README.md  __init__.py  evaluate_agent.py  evaluators.py
evaluation/datasets/: research_test_cases.json
evaluation/results/: eval_summary_20251118_012951.txt
examples/provenance/: README.md  demo_provenance.py  demo_provenance_quick.py  test_real_provenance.py
graph_visualizations/: README.md  comparative_graph.md  deep_research_graph.md  deep_research_graph.txt  quick_research_graph.md  quick_research_graph.txt
logs/: .gitkeep
notebooks/: deepagent_exploration.ipynb
reports/: .gitkeep
scripts/: cleanup_old_files.py
scripts/ci/: check.sh
scripts/experiments/: benchmark_ollama_tps.py  test_code_investigation.py  test_gemini_models.py  test_langsmith_monitoring.py  test_phase4_dynamic_replanning.py
scripts/ingest/: clean_and_reingest.sh  ingest.py  ingest_codebase.py  ingest_codebases.py  ingest_diagnostic.py  ingest_with_preprocessor.py
scripts/studio/: README.md  start_studio.sh  stop_studio.sh
scripts/testing/: test_code_investigation.py  test_feature_dev.py  test_gemini_models.py  test_langsmith_monitoring.py  test_phase4_dynamic_replanning.py
scripts/utils/: check_search_providers.py  export_citations.py  switch_model_provider.py  update_causal_nodes_logging.py  update_node_logging.py  verify_model_provider.py
scripts/visualization/: visualize_causal_graph.py  visualize_graphs.py  visualize_provenance_graph.py
src/: feature_dev_schemas.py  graph.py  models.py  provenance.py  schemas.py  studio_graphs.py
src/config/: __init__.py  research_depth.py
src/graphs/: __init__.py  base_graph.py  causal_inference_graph.py  code_execution_graph.py  code_investigation_graph.py  comparative_graph.py  deep_research_graph.py  fact_check_graph.py  feature_dev_graph.py  quick_research_graph.py  writer_graph.py
src/kg_builder/: __init__.py  entity_linker.py  relationship_extractor.py  validators.py
src/nodes/: analyzer_node.py  brainstormer_node.py  causal_checker_node.py  causal_graph_builder_node.py  code_assistant_node.py  code_executor_node.py  code_flow_tracker_node.py  code_investigation_synthesizer_node.py  code_needs_detector_node.py  code_query_analyzer_node.py  dependency_analyzer_node.py  depth_evaluator_node.py  drill_down_generator.py  evaluator_node.py  evidence_planner_node.py  hypothesis_validator_node.py  issue_analyzer_node.py  master_planner_node.py  outline_generator_node.py  plan_revisor_node.py  planner_node.py  provenance_graph_builder_node.py  publish_node.py  rag_retriever_node.py  reflection_node.py  report_quality_checker_node.py  report_reviewer_node.py  report_revisor_node.py  result_aggregator_node.py  root_cause_synthesizer_node.py  search_query_generator.py  searcher_node.py  section_writer_node.py  subtask_executor.py  subtask_result_aggregator.py  subtask_router.py  synthesizer_node.py  term_definer_node.py  tool_executor_node.py  tool_planner_node.py
src/preprocessor/: __init__.py  chunking_strategy.py  content_cleaner.py  document_analyzer.py  quality_metrics.py
src/prompts/: analyzer_prompt.py  brainstormer_prompt.py  causal_checker_prompt.py  code_assistant_prompt.py  code_executor_prompt.py  code_investigation_prompts.py  depth_evaluator_prompt.py  evaluator_prompt.py  evidence_planner_prompt.py  feature_dev_prompts.py  hypothesis_validator_prompt.py  issue_analyzer_prompt.py  master_planner_prompt.py  outline_generator_prompt.py  plan_revisor_prompt.py  planner_prompt.py  provenance_prompt.py  reflection_prompt.py  report_reviewer_prompt.py  report_revisor_prompt.py  root_cause_synthesizer_prompt.py  section_writer_prompt.py  synthesizer_prompt.py  term_definer_prompt.py
src/tools/: __init__.py  (+4 more)
tests/: __init__.py  conftest.py  test_agent_eval.py  test_deepeval_smoke.py  test_graphs.py  test_models.py
(+50 files in other folders)
