[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test-smith"
version = "2.3.0"
description = "LangGraph-based multi-agent research assistant with hierarchical plan-and-execute strategy"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Test-Smith Team"}
]
keywords = ["langgraph", "langchain", "research", "ai", "agents", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ============================================================================
# Testing Configuration (pytest)
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as performance benchmarks",
    "scientific: marks tests that verify scientific accuracy",
]

# ============================================================================
# Code Quality Configuration (Ruff)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "chroma_db",
    "documents",
    ".pytest_cache",
    ".mypy_cache",
    "htmlcov",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",  # Unused arguments are common in test fixtures
    "S101", # Use of assert is expected in tests
]
"scripts/**/*.py" = [
    "T201", # print statements are ok in scripts
    "E402", # Module level import after dotenv load is acceptable in scripts
]
"benchmarks/**/*.py" = [
    "ARG",  # Unused arguments in benchmark fixtures
]
"main.py" = [
    "E402",  # Module level import after dotenv load is intentional
]
"evaluation/evaluate_agent.py" = [
    "E402",  # Module level import after dotenv load is intentional
]
"chroma_explorer.ipynb" = [
    "B007",  # Unused loop variable is acceptable in notebooks
    "E741",  # Single letter variables acceptable in notebooks
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ============================================================================
# Type Checking Configuration (mypy)
# ============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = false  # Relaxed for gradual typing
warn_unused_configs = true
disallow_untyped_defs = false  # Relaxed - will enable gradually
disallow_incomplete_defs = false  # Relaxed - will enable gradually
check_untyped_defs = true
no_implicit_optional = false  # Relaxed for existing code
warn_redundant_casts = true
warn_unused_ignores = false  # Too many false positives with LangChain
warn_no_return = true
strict_equality = true
exclude = [
    "^build/",
    "^dist/",
    "^.venv/",
    "^venv/",
    "^chroma_db/",
    "^documents/",
]
files = ["src"]  # Only check src for now

# Less strict for tests and benchmarks
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "benchmarks.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false

# Ignore missing imports for third-party libraries
[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_community.*",
    "langchain_google_genai.*",
    "langchain_ollama.*",
    "langchain_chroma.*",
    "langgraph.*",
    "chromadb.*",
    "tavily.*",
    "ollama.*",
    "unstructured.*",
]
ignore_missing_imports = true

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# ============================================================================
# Security Scanning Configuration (Bandit)
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", "benchmarks", "examples", ".venv", "venv"]
skips = ["B101"]  # assert_used - expected in tests
