[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-smith"
version = "2.3.0"
description = "LangGraph-based multi-agent research assistant with hierarchical plan-and-execute strategy"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Test-Smith Team"}
]
keywords = ["langgraph", "langchain", "research", "ai", "agents", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ============================================================================
# Dependencies (managed by uv)
# ============================================================================
dependencies = [
    # LangChain & LangGraph (Core AI Framework)
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=2.0.8",
    "langchain-ollama>=0.3.10",
    "langchain-text-splitters>=0.3.11",
    "langchain-chroma>=0.2.6",
    "langgraph>=0.6.11",
    "langgraph-checkpoint>=2.1.2",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-prebuilt>=0.6.5",
    "langgraph-sdk>=0.2.9",
    "langsmith>=0.4.37",

    # Vector Database & Embeddings
    "chromadb>=1.3.4",

    # Web Search Providers
    "tavily-python>=0.7.12",
    "duckduckgo-search>=8.1.1",

    # LLM Providers
    "ollama>=0.6.0",

    # Document Processing & Ingestion
    "unstructured>=0.18.3",
    "unstructured-client>=0.42.3",
    "unstructured-inference>=1.1.1",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "pypdf>=6.1.3",
    "python-magic>=0.4.27",
    "nltk>=3.9.2",

    # Data Processing & Scientific Computing
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scipy>=1.13.1",

    # Configuration & Environment
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",

    # CLI & User Interface
    "typer>=0.20.0",
    "click>=8.1.8",
    "rich>=14.2.0",

    # Testing Framework
    "pytest>=8.4.2",
    "pytest-cov",

    # HTTP & Networking
    "requests>=2.32.5",
    "aiohttp>=3.13.2",
    "httpx>=0.28.1",

    # MCP (Model Context Protocol)
    "mcp>=1.0.0",

    # Utilities
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",

    # Logging
    "structlog>=24.1.0",

    # Jupyter & Visualization (Optional but recommended)
    "jupyter",
    "ipywidgets",
    "matplotlib>=3.9.4",
    "seaborn",
    "plotly",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.2",
    "mypy>=1.17.0",
    "pytest>=8.4.2",
    "pytest-cov",
    "pytest-mock",
]

# ============================================================================
# Testing Configuration (pytest)
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as performance benchmarks",
    "scientific: marks tests that verify scientific accuracy",
]

# ============================================================================
# Code Quality Configuration (Ruff)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "chroma_db",
    "documents",
    ".pytest_cache",
    ".mypy_cache",
    "htmlcov",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",  # Unused arguments are common in test fixtures
    "S101", # Use of assert is expected in tests
]
"scripts/**/*.py" = [
    "T201", # print statements are ok in scripts
    "E402", # Module level import after dotenv load is acceptable in scripts
]
"benchmarks/**/*.py" = [
    "ARG",  # Unused arguments in benchmark fixtures
]
"main.py" = [
    "E402",  # Module level import after dotenv load is intentional
]
"evaluation/evaluate_agent.py" = [
    "E402",  # Module level import after dotenv load is intentional
]
"chroma_explorer.ipynb" = [
    "B007",  # Unused loop variable is acceptable in notebooks
    "E741",  # Single letter variables acceptable in notebooks
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ============================================================================
# Type Checking Configuration (mypy)
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = false  # Relaxed for gradual typing
warn_unused_configs = true
disallow_untyped_defs = false  # Relaxed - will enable gradually
disallow_incomplete_defs = false  # Relaxed - will enable gradually
check_untyped_defs = true
no_implicit_optional = false  # Relaxed for existing code
warn_redundant_casts = true
warn_unused_ignores = false  # Too many false positives with LangChain
warn_no_return = true
strict_equality = true
exclude = [
    "^build/",
    "^dist/",
    "^.venv/",
    "^venv/",
    "^chroma_db/",
    "^documents/",
]
files = ["src"]  # Only check src for now

# Less strict for tests and benchmarks
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "benchmarks.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false

# Ignore missing imports for third-party libraries
[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_community.*",
    "langchain_google_genai.*",
    "langchain_ollama.*",
    "langchain_chroma.*",
    "langchain_core.*",
    "langchain_text_splitters.*",
    "langgraph.*",
    "chromadb.*",
    "tavily.*",
    "ollama.*",
    "unstructured.*",
    "numpy.*",
    "dotenv.*",
    "pytest.*",
    "_pytest.*",
    "pydantic.*",
    "structlog.*",
    "mcp.*",
]
ignore_missing_imports = true
ignore_errors = true

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# ============================================================================
# Security Scanning Configuration (Bandit)
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", "benchmarks", "examples", ".venv", "venv"]
skips = ["B101"]  # assert_used - expected in tests

# ============================================================================
# Hatchling Build Configuration
# ============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================================
# UV Configuration
# ============================================================================
[tool.uv]
dev-dependencies = [
    "ruff>=0.9.2",
    "mypy>=1.17.0",
    "pytest>=8.4.2",
    "pytest-cov",
    "pytest-mock",
]

[tool.uv.sources]
# Use PyPI for all packages
# Uncomment below if you want to use a custom index
# [[tool.uv.index]]
# url = "https://pypi.org/simple"
# name = "pypi"
